New and Create routes working with new.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,5 +22,9 @@
             
     </ul>
     
+    <nav>
+        <a href="/smokytrout/new">Add New GSMNP Stream</a>
+    </nav>
+    
 </body>
 </html>
