--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,7 +17,9 @@
     Recommended Fly Patterns: <%=stream.recommended_flies%> </br>
     <br>
     <br>
-    <%=stream.discription%> </br>
+    About This Stream: </br>
+    <br>
+    <%=stream.about_this_stream%> </br>
     <br>
     <nav>
         <a href="/smokytrout">BACK TO HOMEPAGE</a>
