Edit route and edit.ejs working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,17 @@
             <li>
                 <a href="/smokytrout/<%=streams[i].id; %>">
                     <%=streams[i].name;%>
-                </a>
+                </a></br>
+                <br>
+                <a href="/smokytrout/<%=streams[i].id%>/edit">UPDATE STREAM INFO</a></br>
+                <br>
+                <br>
             </li>
 
       <% } %>
             
     </ul>
-    
+
     <nav>
         <a href="/smokytrout/new">Add New GSMNP Stream</a>
     </nav>
