Update, Edit, and Delete routes working

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Edit Stream</h2>
-    <form action="'/smokytrout/<%=stream.id%>?_method=PUT" method="POST">
+    <form action="/smokytrout/<%=stream.id%>?_method=PUT" method="POST">
         Name: <input type="text" name="name" value="<%=stream.name%>"/> </br>
         <br>
         Location: <input type="text" name="location" value="<%=stream.location%>"/> </br>
