--- a/views/show.ejs
+++ b/views/show.ejs
@@ -21,6 +21,10 @@
     <br>
     <%=stream.about_this_stream%> </br>
     <br>
+    <form action="/smokytrout/<%=stream.id%>?_method=DELETE" method="POST">
+        <input type="submit" value="DELETE"/>
+    </form> </br>
+    <br>
     <nav>
         <a href="/smokytrout">BACK TO HOMEPAGE</a>
     </nav>
