--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/head.ejs') %>
     <title><%=stream.name%></title>
 </head>
 <body>
@@ -22,6 +21,7 @@
     <%=stream.about_this_stream%> </br>
     <br>
     <form action="/smokytrout/<%=stream.id%>?_method=DELETE" method="POST">
+        
         <input type="submit" value="DELETE"/>
     </form> </br>
     <br>
